DE3284 - Fauxdal Error Style Fix text alignment on alert

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -144,6 +144,11 @@ app-add-me-to-map {
         text-align: center;
       }
 
+      .alert,
+      .alert crds-content-block {
+        text-align: left;
+      }
+
       @media (min-width: $screen-xs) {
         padding: 2rem;
 
